--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     dataBinding {
         enabled = true
@@ -27,7 +27,7 @@ android {
     defaultConfig {
         applicationId "com.example.android.unsplash"
         minSdkVersion 21
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -39,13 +39,10 @@ android {
     }
 }
 
-ext {
-    supportLibVersion = '23.4.0'
-}
-
 dependencies {
-    compile "com.android.support:support-annotations:${supportLibVersion}"
-    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
+    compile 'com.android.support:support-v4:25.1.0'
+    compile "com.android.support:support-annotations:25.1.0"
+    compile "com.android.support:recyclerview-v7:25.1.0"
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
 }
